# lakefs-demo

./: .gitignore  LakeFS-Overview.md  README.md  Simplifying DataOps with LakeFS.pptx  pyproject.toml
deployment/: lakefs-deploy.ipynb
