[tool.poetry]
name = "lakefs-demo"
version = "0.1.0"
description = ""
authors = ["Ryan Skinner"]

[tool.poetry.dependencies]
python = "^3.9"
lakefs-client = "^0.62.0"
boto3 = "^1.21.42"
pandas = "^1.4.2"
pyarrow = "^7.0.0"

[tool.poetry.dev-dependencies]
jupyterlab = "^3.3.3"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
